	- Move t/manifest.t, t/pod_coverage.t and t/pod.t to xt/author.
	- Add Changelog.ini.
	- Add .gitignore, LICENSE.
	- Modernize MANIFEST.SKIP.
	- Switch from 'use base' to 'use parent'.
	- Add various modules to the pre-reqs in Makefile.PL.
	- Update SEE ALSO in pod.
	- Standardize dates in this file.
	- Add t/24_HTML5_test.t to test RT#121099.

0.180001  2017-02-05T12:00:00
  * added github repo to Makefile
  * update Documentations for configurable characters in ASCII view

0.18  2017-02-04T12:00:00
    * added configurable characters for ASCII view

0.17  2017-02-03T12:00:00
    * added node_formatter support for ASCII view

0.16  2007-Jul-09T12:00:00
    * cleaning bad files in the tar.gz
    * converted to Build.PL

0.15  2007-May-21T12:00:00
    * added a simple Tree::Simple::View::ASCII
        - added docs and tests for it

0.14  2004-Nov-28T12:00:00
    - removing the OS X resource fork files
    - applied patch (RT #16064) to support XHTML
      compliant output for Tree::Simple::View::HTML.
        - thanks to Simon Wilcox for this patch and tests

0.13  2005-Nov-07T12:00:00
    - fixing typo on the generated HTML (rt.cpan.org Ticket #14963)
    - cleaned up View.pm as little as well

0.12  2005-Jan-31T12:00:00
    - converted this to use Class::Throwable for exceptions
       - altered tests for this

    - added the 'radio_button' and 'checkbox' attributes to
      the Tree::Simple::View::DHTML class
        - added tests for this
        - added documentation for this

0.11  2004-Nov-18T12:00:00
    - now using Scalar::Util::blessed() instead of
      the convoluted UNIVERSAL::isa() stuff.
      - added Scalar::Util as a dependency

0.10  2004-Aug-07T12:00:00
    - Added the setPathComparisonFunction method
      so that custom node value's can be compared
      easily. Thanks to Neyuki for this idea.
        - documentented and tested this

0.09  2004-Aug-02T12:00:00
    - I forgot to change the version requirements for