@@ -16,6 +16,7 @@ Comments= <<EOT
 - Update SEE ALSO in pod.
 - Standardize dates in this file.
 - Add t/24_HTML5_test.t to test RT#121099.
+- Replace most double-quotes with single-quotes to reduce visual clutter.
 EOT
 
 [V 0.180001]
